--- a/gke-with-nat-route.yml
+++ b/gke-with-nat-route.yml
@@ -4,4 +4,4 @@ resources:
 - name: gke-with-nat-route
   type: gke-with-nat-route.jinja
   properties:
-    zone: us-central1-b                  
+    zone: europe-west2-a              
